<resources>
    <string name="app_name">Schoolbox365</string>
    <string name="dot_indicator_content_desc">Dot indicator to track screen position.</string>
    <string name="onboarding_illustration_content_desc">Artistic illustration for onboarding screen</string>
    <string name="onboard_skip_btn_text">Skip</string>
    <string name="onboard_next_btn_text">Next</string>
    <string name="onboard_screen1_title">Make School Life Easy</string>
    <string name="onboard_screen1_message">Receive news and announcements from school and lecturers in real time. \n\n Stay up to date with all school-related activities like lectures and assignments.</string>
    <string name="onboard_screen2_title">Do Your Job With Ease</string>
    <string name="onboard_screen2_message">Easily manage all your lectures, courses, and assignment submissions.</string>
    <string name="onboard_screen3_title">Manage Staff and Students All In One Place</string>
    <string name="onboard_screen3_message">Keep staff and student records close to you and instantly post school-wide announcements.</string>
    <string name="onboard_next_btn_text_done">Done</string>
    <string name="login_illus_content_desc">Artistic illustration for login page</string>
    <string name="reg_no_edit_text_hint">Registration No.</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_subheading">Please sign in to continue</string>
    <string name="wromg_email_format">Email format is wrong</string>
    <string name="wrong_email">Email is wrong</string>
    <string name="error_too_short_password">Password is too short</string>
</resources>