<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.GadsMobileEdu22.Schoolbox365.MainActivityViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/login_illus_imgvw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:contentDescription="@string/login_illus_content_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login" />

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_illus_imgvw" />

            <TextView
                android:id="@+id/login_subhead_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/login_subheading"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#B3FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_tv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_no_txt_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:errorEnabled="true"
                error="@{viewModel.login.emailError}"
                android:textColorHint="#ffffff"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_subhead_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_no_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_reg_no"
                    android:drawablePadding="12dp"
                    android:text="@={viewModel.login.emailInput}"
                    onFocus="@{viewModel.onFocusEmail}"
                    android:hint="@string/reg_no_edit_text_hint"
                    android:background="@drawable/edit_text_shape"
                    android:inputType="textShortMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_txt_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:errorEnabled="true"
                error="@{viewModel.login.passwordError}"
                android:textColorHint="#ffffff"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_no_txt_layout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/background_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    onFocus="@{viewModel.onFocusPassword}"
                    android:text="@={viewModel.login.passwordInput}"
                    android:hint="@string/password_edit_text_hint"
                    android:background="@drawable/edit_text_shape"
                    android:inputType="textPassword"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/ic_pasword"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:minWidth="0dp"
                android:enabled="@{viewModel.login.valid}"
                android:onClick="@{() -> viewModel.onButtonClick()}"
                android:minHeight="0dp"
                android:textColor="@color/black"
                android:outlineProvider="background"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_txt_layout" />

            <TextView
                android:id="@+id/forgot_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/forgot_password"
                android:fontFamily="@font/roboto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>